[package]
name = "egbert"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2.8", features = ["js"] }
rand = "0.8.5"
sycamore = "0.9.0-beta.1"
web-sys = { version = "0.3.61", features = ["HtmlCanvasElement", "CanvasRenderingContext2d", "console"] }
